--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-
+{
+  "name": "whatsapp-baileys-server",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.9",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "qrcode": "^1.5.3",
+    "axios": "^1.6.0"
+  }
+}
